--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.0
   dio:
+  flutter_svg:
   sidebarx: ^0.17.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,7 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/pixiv.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
