--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   url_launcher:
+  fl_chart:
+  syncfusion_flutter_charts:
 
 dev_dependencies:
   flutter_test:
